style(feature__xl): fix white space
This commit includes changes to white spaces on xl screens.
The changes include:

- Removal of white spaces from feature block.
- Adjusting text size of feature heading in the feature heading block.

These changes ensure that the feature block renders well on xl devices
and window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -2707,7 +2707,7 @@ vertical-align: top;
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding-top: 10rem;
+  padding-top: 7rem;
 }
 
 .main__feature {
@@ -2747,7 +2747,7 @@ vertical-align: top;
 }
 
 .feature__info-heading {
-  font-size: 2.6rem;
+  font-size: 2.8rem;
   color: #000000;
   font-weight: 600;
 }
@@ -2760,7 +2760,7 @@ vertical-align: top;
 }
 
 .feature__info-text {
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 .feature__link-block {
@@ -2771,8 +2771,9 @@ vertical-align: top;
 }
 
 .feature__link {
-  font-size: 1.7rem;
+  font-size: 1.8rem;
   text-decoration: underline;
+  font-weight:600;
 }
 
 /* footer */
